# C-Programming-Project

./: .gitignore  CMakeLists.txt  README.md
include/: blackjack.h  deck.h
src/: blackjack.c  client.c  deck.c  server.c
